# docgen

./: .env.example  .gitignore  README.md  pyproject.toml
src/docgen/: __init__.py  analyzer.py  cli.py  renderer.py  ui_actions.py  ui_content_contract.py  ui_data.py  ui_rendering.py  ui_run_diff.py  ui_server.py
src/docgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/docgen/llm/: __init__.py  config.py  context_builder.py  explain_plan.py  module_batch_explainer.py  module_batch_verifier.py  module_explainer.py  module_verifier.py  openrouter_provider.py  prompts.py  run_history.py  schemas.py
tests/: test_analyzer_cli.py  test_explain_batch_cli.py  test_explain_plan_cli.py  test_llm_provider_cli.py  test_module_explainer_cli.py  test_module_verifier_cli.py  test_renderer_cli.py  test_run_history.py  test_ui_actions.py  test_ui_content_contract.py  test_ui_data_cli.py  test_ui_rendering.py  test_ui_run_diff.py  test_ui_server_cli.py  test_verify_batch_cli.py
tests/fixtures/sample_project/: main.py  notes.custom  package.json  requirements.txt
tests/fixtures/sample_project/config/: settings.yaml
tests/fixtures/sample_project/docs/: overview.md
tests/fixtures/sample_project/docs-generated/: architecture.md  coverage-report.md  dependency-map.md  doc-manifest.json  index.md  module-map.md
tests/fixtures/sample_project/docs-generated/files/: file-main-py.md  (+8 more)
tests/fixtures/sample_project/python_pkg/: __init__.py  core.py  helpers.py
tests/fixtures/sample_project/src/: index.ts
tests/fixtures/sample_project/tests/: test_core.py
(+9 files in other folders)
